# eve

./: .dockerignore  .env  .env.aws  .env.vultr  .gitignore  AGENTS.md  Gemfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-tui.txt  terramate.tm.hcl  tokscale-export-20260627-100851.json
.claude/: settings.json
.devcontainer/: devcontainer.json
config/: catalog.local.example.yaml  catalog.yaml  defaults.yaml  plugin-sources.yaml  recommended-sources.yaml
core/: sdk.rb
dev/: stack.tm.hcl
docker/: Dockerfile  Dockerfile.toolchain  build.sh  entrypoint.sh
docs/: agent-orchestration.md  ai-sandboxes.md  integration-testing.md  multi-purpose-vm-blueprint.md  package-anatomy.md  plugins.md  raspberry-pi-provider.md  remote-desktop-compatibility.md  state.md  v3.1-provider-plugin-boundaries-plan.md  v3.1-roadmap.md  v3.2-roadmap.md  v3.3-acceptance.md  v3.3-audit.md  v3.3-roadmap.md  v3.4-acceptance.md  v3.4-python-baseline.md  v3.4-roadmap.md  v3.4-ruby-inventory.md  v3.5-roadmap.md  v4.0-phase3-status.md  v4.0-roadmap.md  v4.1-roadmap.md  v4.2-roadmap.md  v4.3-roadmap.md  v4.4-roadmap.md  v4.5-agent-tasks.md  v4.5-fsm-design.md  v4.5-roadmap.md
eve_sdk/: __init__.py  atomic_yaml.py  catalog.py  catalog_view.py  cli.py  config.py  dispatch.py  engine.py  env_emission.py  instance_dispatch.py  instance_view.py  package_dispatch.py  plugin_manifest.py  plugin_test.py  profile_resolve.py  provider_command.py  provision_pollers.py  registry.py  registry_selection.py  remote_launch.py  resolve.py  resolver.py  schema.py  secrets.py  semver.py  state.py  state_machine.py  tf_dispatch.py  tf_env.py  vagrant_dispatch.py  workdir.py
scripts/: bundle-selection  catalog-options  check-required  config-env  config-migrate  config-save  doctor  egame-tui  env-require  eve  eve-cli  eve-docker  eve-flatten-steps  eve-local-install  eve-tui  host-timezone  install-cli  instance-create  instance-delete  instance-ip  instance-list  instance-observe  instance-password  instance-paths  instance-profile-overlay  instance-provision  instance-resolve  instance-run  instance-ssh  instance-state  instance-status  instance-view  integration-test  logs  package-action  package-dispatch  package-down-command  package-down-windows  package-list  package-plugin  (+92 more)
stacks/: config.tm.hcl  providers.tm.hcl
tui/: __init__.py  app.py  commands.py  plugins.py  render.py  state.py  (+2 more)
(+334 files in other folders)
