[project]
name = "eve"
version = "3.0.0"
description = ""
authors = [
    {name = "Christian-Manuel Butzke",email = "chris@fruwe.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jsonschema (>=4.25.1,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "textual (>=8.2.5,<9.0.0)"
]

[dependency-groups]
dev = [
    "mypy (>=1.20.2,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"scripts/eve-tui" = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["scripts/eve-tui"]

[[tool.mypy.overrides]]
module = ["jsonschema.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
